syntax = "proto3";
package com.example.helloservice;

option java_multiple_files = true;
option java_package = "com.example.helloservice.gen.proto";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service HelloService {
  rpc hello (HelloRequest) returns (HelloResponse);
}
